# procedural-world-generation

./: .gitignore
client/: .gitignore  index.html  package-lock.json  package.json
client/src/: App.svelte  Router.svelte  app.css
client/src/components/3D/: Tile.svelte
client/src/lib/: Background.svelte
client/src/lib/stores/: worldStore.ts
client/src/routes/: +page.svelte  Home.svelte  Worldview.svelte
client/src/routes/test/: Scene.svelte
client/src/routes/world/: +page.svelte
server/: .gitignore  Cargo.toml
server/src/: main.rs
server/src/api/: main.rs  mod.rs  world.rs
server/src/generators/: mod.rs  world_generator.rs
server/src/models/: tile.rs
